# Vertex

./: .gitignore  CONTRIBUTING.md  README.md  Vertex.sln
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: compat-e2e.yml  dotnet-test.yml  go-test.yml
compat/: README.md
compat/bidi-echo/: README.md  echo.proto  run.sh
compat/bidi-echo/dotnet-server/: EchoServer.csproj  Program.cs
compat/bidi-echo/php-client/: bootstrap.php  main.php
compat/gaming-event-push/: gaming_event.proto  run.sh
compat/gaming-event-push/dotnet-server/: GamingEventPushServer.csproj  Program.cs
compat/gaming-event-push/go-client/: go.mod  main.go
compat/gaming-reverse-rpc/: .gitignore  gaming_reverse.proto  run.sh
compat/gaming-reverse-rpc/dotnet-server/: GamingReverseRpcServer.csproj  Program.cs
compat/gaming-reverse-rpc/go-client/: go.mod  main.go
compat/hello/: README.md  hello.proto  run-cpp.sh  run-php.sh  run.sh
compat/hello-disconnect/: .gitignore  hello_disconnect.proto  run.sh
compat/hello-disconnect/dotnet-server/: HelloDisconnectServer.csproj  Program.cs
compat/hello-disconnect/go-client/: go.mod  main.go
compat/hello-reverse-rpc/: hello_reverse_rpc.proto  run.sh
compat/hello-reverse-rpc/dotnet-server/: HelloReverseRpcServer.csproj  Program.cs
compat/hello-reverse-rpc/go-client/: go.mod  main.go
compat/hello-rpc/: .gitignore  hello_rpc.proto  run-php.sh  run.sh
compat/hello-rpc/dotnet-server/: HelloRpcServer.csproj  Program.cs
compat/hello-rpc/go-client/: go.mod  main.go
compat/hello-rpc/php-client/: bootstrap.php  composer.json  main.php
compat/hello/cpp-client/: CMakeLists.txt  main.cpp  vcpkg.json
compat/hello/dotnet-server/: HelloServer.csproj  Program.cs
compat/hello/go-client/: go.mod  main.go
compat/hello/php-client/: bootstrap.php  main.php
compat/payment-wallet-query/: run.sh  wallet.proto
compat/payment-wallet-query/dotnet-server/: PaymentWalletQueryServer.csproj  Program.cs
compat/payment-wallet-query/go-client/: go.mod  main.go
docs/: getting-started-dotnet.md  getting-started-go.md
dotnet/: README.md
go/: README.md
protos/: README.md
protos/vertex/v1/: envelope.proto
spec/: README.md  peer-authentication.md  transport-contract.md  wire-format.md
(+1 files in other folders)
